--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Site Title"
+title                    : "Keondo's development blog"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Keondo Park"
@@ -97,7 +97,7 @@ author:
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Data scientist"
   location         : "Seoul, South Korea"
-  email            : "gundo0102@gmail.com"
+  #email            : "gundo0102@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
